updated logos and background picture. fiddled with filter functions

--- a/vue/package.json
+++ b/vue/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.1.0",
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "mapbox-gl": "^2.4.0",
