--- a/vue/package.json
+++ b/vue/package.json
@@ -16,7 +16,8 @@
     "mapbox-gl": "^2.4.0",
     "vue": "^2.6.12",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.11",
